# BPTest

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/rcsc/: layer.h  network.h  optimizer.h  sequential.h
include/utils/: matrix.h  utils.h
rcsc/: layer.cpp  layer.h  network.h  optimizer.cpp  optimizer.h  sequential.cpp  sequential.h
src/rcsc/: layer.cpp  network.cpp  optimizer.cpp  sequential.cpp
src/utils/: matrix.cpp
utils/: matrix.cpp  matrix.h  utils.h
